# easy-demos

./: README.md  pyproject.toml
api-demo/: data.jsonl  process.py  test.csv  test_6th.csv  train.csv  train_6th.csv  train_wrong.csv
why-agents/: app.py
why-prompt-learner/: dataset.py  grid_search.ipynb  grid_search.py  test.csv  train.csv
