[tool.poetry]
name = "easy-demos"
version = "0.1.0"
description = ""
authors = ["Aditya Lahiri <adityalahiri13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
prompt-learner = "0.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
